# DeltaFleet

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
backend/apps/drivers/: serializers.py
backend/apps/fleet/: models.py  serializers.py  urls.py  views.py
backend/apps/logistics/: models.py  serializers.py
backend/apps/notifications/: serializers.py  urls.py  views.py
backend/apps/tracking/: serializers.py
backend/apps/trips/: models.py  serializers.py  urls.py  views.py
backend/apps/users/: models.py  permissions.py  serializers 2.py  urls.py  views 2.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/authentication/: serializers.py  urls.py  utils.py  views.py
backend/celery_app/: celery.py
backend/config/: asgi.py  routing.py  settings.py  urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/drivers/: models.py
backend/tracking/: models.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
docs/: git.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: GmapDirectionsRenderer.vue  LocationInput.vue  TruckMap.vue
frontend/src/components/auth/: CheckEmail.vue  VerifyEmail.vue
frontend/src/router/: index.js
frontend/src/services/: authService.js  index.js
frontend/src/views/: RegisterView.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
frontend/src/views/common/: MapView.vue
(+3 files in other folders)
