[project]
name = "backend"
version = "0.1.0"
description = "DeltaFeet API"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "celery==5.4.0",
    "dj-rest-auth>=7.0.1",
    "django==5.1.3",
    "django-allauth==0.63.2",
    "django-anymail==10.2",
    "django-cors-headers==4.3.1",
    "django-otp==1.3.0",
    "django-two-factor-auth==1.16.0",
    "djangorestframework==3.15.0",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular>=0.28.0",
    "phonenumbers==8.13.34",
    "pillow==10.3.0",
    "psycopg2-binary==2.9.9",
    "pyotp==2.9.0",
    "python-decouple==3.8",
    "qrcode==7.4.2",
    "redis==5.0.4",
]
